[package]
name = "ll"
version = "0.2.9"
authors = ["Aaron Abramov <aaron@abramov.io>"]
edition = "2018"
description = "rust logging library"
license = "MIT"
repository = "https://github.com/aaronabramov/ll"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
colored = "1.9"
lazy_static = "1.4"
strip-ansi-escapes = "0.1"

[dev-dependencies]
k9 = "0.2"
tokio = { version = "0.2.22", features = ["macros", "rt-threaded"] }