[package]
name = "ll"
version = "7.0.0"
edition = "2018"
authors = ["Aaron Abramov <aaron@abramov.io>"]
description = "rust logging library"
license = "MIT"
repository = "https://github.com/aaronabramov/ll"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
colored = "1.9"
crossterm = "0.20"
lazy_static = "1"
strip-ansi-escapes = "0.1"
term_size = "0.3"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
k9 = "0.11"
